使用 Colaboratory 建立

--- a/testing/增加Function維度_測試SGD的變化.ipynb
+++ b/testing/增加Function維度_測試SGD的變化.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "增加維度測試SGD.ipynb",
+      "name": "增加Function維度_測試SGD的變化.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNibN4sMym1w8I9Rtfr1HwN",
+      "authorship_tag": "ABX9TyPMXYAgusTgL5Y9DouXCacQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,11 +86,16 @@
         "# iteration 次數（我們要走多少步）、\n",
         "# 以及最後我們用兩個陣列，來分別儲存每一步我的走到的位置\n",
         "# 決定 w 與 b 的起始點\n",
+        "# SGD(Stochastic Gradient Descent, 隨機梯度下降法) 的技巧：\n",
+        "# 只針對 SSE (Sum Square Error, 誤差平方和) 進行微分，\n",
+        "# 而非整個損失函式之 MSE (Mean Squared Error) 或 RMSE (Root Mean Square Error) \n",
         "w2 = 0\n",
         "w = 1\n",
         "b = -180\n",
+        "\n",
         "# 決定 learning rate\n",
         "lr = 1 # 0.0000001 \n",
+        "\n",
         "# 決定 iteration 的次數\n",
         "iteration = 100000\n",
         "\n",
